--- a/pelotas.htm
+++ b/pelotas.htm
@@ -17,7 +17,11 @@ MM_reloadPage(true);
 </head>
 
 <body>
-<div id="Layer1" style="position:absolute; left:151px; top:89px; width:595px; height:350px; z-index:1"><img src="pelotas2.gif" width="593" height="395"></div>
-<div id="Layer2" style="position:absolute; left:805px; top:90px; width:569px; height:381px; z-index:2"><img src="frutas2.gif" width="550" height="400"></div>
+<div id="Layer1" style="position:absolute; left:176px; top:91px; width:310px; height:278px; z-index:1"><img src="autos.gif" width="333" height="262"></div>
+<div id="Layer2" style="position:absolute; left:532px; top:89px; width:316px; height:281px; z-index:2"><img src="coehete.gif" width="319" height="266"></div>
+<div id="Layer3" style="position:absolute; left:882px; top:89px; width:322px; height:287px; z-index:3"><img src="frutas2.gif" width="315" height="284"></div>
+<div id="Layer4" style="position:absolute; left:176px; top:412px; width:308px; height:275px; z-index:4"><img src="montana.gif" width="305" height="271"></div>
+<div id="Layer5" style="position:absolute; left:536px; top:410px; width:315px; height:277px; z-index:5"><img src="pelotas2.gif" width="314" height="271"></div>
+<div id="Layer6" style="position:absolute; left:889px; top:410px; width:312px; height:277px; z-index:6"><img src="transform.gif" width="326" height="270"></div>
 </body>
 </html>
