--- a/azul.htm
+++ b/azul.htm
@@ -23,6 +23,7 @@ a:hover {
 <p><a href="pasatiempos.htm" target="mainFrame">Pasatiempos</a></p>
 <p><a href="otrasligas.htm" target="mainFrame">Otras ligas</a></p>
 <p><a href="contacto.htm" target="mainFrame">Contacto</a></p>
+<p><a href="pelotas.htm" target="mainFrame">Practicas Flash </a></p>
 <p>&nbsp; </p>
 <p>&nbsp; </p>
 </body>
