--- a/azul.htm
+++ b/azul.htm
@@ -24,6 +24,7 @@ a:hover {
 <p><a href="otrasligas.htm" target="mainFrame">Otras ligas</a></p>
 <p><a href="contacto.htm" target="mainFrame">Contacto</a></p>
 <p><a href="pelotas.htm" target="mainFrame">Practicas Flash </a></p>
+<p><a href="playas.htm" target="mainFrame">Playas</a></p>
 <p>&nbsp; </p>
 <p>&nbsp; </p>
 </body>
