--- a/playas.htm
+++ b/playas.htm
@@ -20,6 +20,7 @@ MM_reloadPage(true);
 <div id="Layer2" style="position:absolute; left:583px; top:89px; width:349px; height:322px; z-index:2"><img src="playa2.gif" width="351" height="321"></div>
 <div id="Layer3" style="position:absolute; left:1056px; top:88px; width:356px; height:318px; z-index:3"><img src="playa3.gif" width="363" height="316"></div>
 <div id="Layer1" style="position:absolute; left:134px; top:92px; width:330px; height:319px; z-index:4"><img src="playa1.gif" width="387" height="315"></div>
-<div id="Layer4" style="position:absolute; left:130px; top:452px; width:346px; height:298px; z-index:5"><img src="playa4.gif" width="403" height="333"></div>
+<div id="Layer4" style="position:absolute; left:334px; top:454px; width:346px; height:298px; z-index:5"><img src="playa4.gif" width="403" height="333"></div>
+<div id="Layer5" style="position:absolute; left:832px; top:454px; width:393px; height:335px; z-index:6"><img src="PLAYA5.gif" width="449" height="334"></div>
 </body>
 </html>
